fix: Decrease image size on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -264,8 +264,8 @@ a.link-image:hover {
    }
 
    .latest-img {
-    width: 600px;
-    height: 400px;
+    width: 500px;
+    height: 300px;
     border-radius: 5%;
    }
 
